[gd_scene load_steps=7 format=2]

[ext_resource path="res://asset/sprite2D/UI/avatar_teacher.png" type="Texture" id=1]
[ext_resource path="res://object/chat_bubble/chat_bubble.gd" type="Script" id=2]
[ext_resource path="res://asset/font/Roboto-Black.ttf" type="DynamicFontData" id=3]

[sub_resource type="Theme" id=1]

[sub_resource type="DynamicFont" id=2]
size = 27
use_mipmaps = true
use_filter = true
extra_spacing_top = -2
extra_spacing_space = 1
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 15.0
content_margin_right = 15.0
content_margin_top = 15.0
content_margin_bottom = 15.0
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.411765, 0.411765, 0.411765, 1 )
corner_radius_top_left = 18
corner_radius_top_right = 18
corner_radius_bottom_right = 18
corner_radius_bottom_left = 18
anti_aliasing_size = 0.01

[node name="ChatServer" type="Control"]
script = ExtResource( 2 )

[node name="Avatar" type="TextureButton" parent="."]
margin_left = 1053.0
margin_top = 117.0
margin_right = 1178.0
margin_bottom = 242.0
rect_scale = Vector2( 0.7, 0.7 )
theme = SubResource( 1 )
toggle_mode = true
texture_normal = ExtResource( 1 )

[node name="Label" type="Label" parent="Avatar"]
anchor_top = 0.5
anchor_right = 0.068
anchor_bottom = 0.5
margin_left = -380.0
margin_top = -62.5
margin_right = -19.5
margin_bottom = 93.5
rect_pivot_offset = Vector2( 380, 60 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "????? ????? ????? ????? ????? ?????
????? ????? ????? ????? ????? ?????
????? ????? ????? ????? ????? ?????
????? ????? ????? ????? ????? ?????"
autowrap = true
clip_text = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="mouse_entered" from="Avatar" to="." method="_on_TextureButton_mouse_entered"]
[connection signal="mouse_exited" from="Avatar" to="." method="_on_TextureButton_mouse_exited"]
[connection signal="toggled" from="Avatar" to="." method="_on_Avatar_toggled"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
